<resources>
    <string name="app_name">TrackMyTime</string>
    <string name="start_workday">Start Workday</string>
    <string name="ueberstundenkonto">Überstundenkonto: %1$s</string>
    <string name="heute">Heute gearbeitet: 00:00:00</string>
    <string name="start_pause">Start Pause</string>
    <string name="end_pause">End Pause</string>
    <string name="end_workday">End Workday</string>
    <string name="current_date">Current date</string>
    <string name="time_string">Heute gearbeitet: %1$s</string>
</resources>
