<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ueberstundenkonto"
        android:layout_width="248dp"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ueberstundenkonto"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <TextView
        android:id="@+id/todaysElapsedTime"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="412dp"
        android:text="@string/heute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/current_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/todaysElapsedTime"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonStartWorkday"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_workday"
        android:onClick="startWorkday"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonStartPause"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_pause"
        android:onClick="startPause"
        app:layout_constraintBottom_toTopOf="@+id/buttonEndPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEndPause"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/end_pause"
        android:onClick="endPause"
        app:layout_constraintBottom_toTopOf="@+id/buttonEndWorkday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEndWorkday"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/end_workday"
        android:onClick="endWorkday"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>